--- a/MeraFilms/package.json
+++ b/MeraFilms/package.json
@@ -27,7 +27,8 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "restler":"*"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
